fix(favicon): changed favicon to match main colour of the background fix(nav): updated font for legibility

--- a/pencil/src/app/home/home.component.scss
+++ b/pencil/src/app/home/home.component.scss
@@ -10,7 +10,7 @@
     padding: 0;
     font-family: 'Playfair Display', serif;
     font-size: 2em;
-    color: white;
+    color: black;
 }
 
 .lead{
