--- a/pencil/src/app/nav/nav.component.scss
+++ b/pencil/src/app/nav/nav.component.scss
@@ -1,7 +1,7 @@
 .navbar-brand{
     font-family: 'Playfair Display', serif;
     font-size: 2em;
-    color: white;
+    color: black;
 }
 
 .navbar{
@@ -10,7 +10,7 @@
 }
 
 .nav-item{
-    color: white !important;
+    color: black !important;
     text-align: right;
 }
 
